# ac-ui2

./: .gitignore  README.md  ac-ui  pyproject.toml
ac_ui/: audio.py  colors.py  constants.py  editors.py  eq.py  layout.py  layout_config.py  layout_engine.py  modal.py  persist.py  stats.py  term.py  town_tune.py  tracks.py  ui.py  visualizer.py
tests/: conftest.py  test_smoke.py
